--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "bcryptjs": "^2.4.3",
     "config": "^3.3.6",
     "express": "^4.17.1",
     "express-validator": "^6.10.0",
     "git": "^0.1.5",
     "gravatar": "^1.8.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.2"
   },
   "devDependencies": {
